--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,7 +146,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="36dp"
         android:layout_marginRight="36dp"
-        android:text="Slon In Sadez"
+        android:text="TO DO Konec"
         android:textColor="#A1A1A1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -172,7 +172,7 @@
         android:layout_marginTop="72dp"
         android:layout_marginEnd="36dp"
         android:layout_marginRight="36dp"
-        android:text="Slon In Sadez"
+        android:text="TO DO Zacetek"
         android:textColor="#A1A1A1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -185,7 +185,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="36dp"
         android:layout_marginRight="36dp"
-        android:text="Slon In Sadez"
+        android:text="temp mesto"
         android:textColor="#A1A1A1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -211,7 +211,7 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="36dp"
         android:layout_marginRight="36dp"
-        android:text="Slon In Sadez"
+        android:text="temp izvajalec"
         android:textColor="#A1A1A1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -236,7 +236,7 @@
         app:constraint_referenced_ids="buttonDodajPrireditev,editTextNaslovPrireditve,textViewZacetekLabel,textViewKonec,textViewMesto,editTextCenaVstopnice,textViewKonecLabel,textViewZacetek,textViewMestoLabel,textViewIzvajalec,textViewIzvajalecLabel"
         tools:layout_editor_absoluteX="180dp"
         tools:layout_editor_absoluteY="231dp"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
